<resources>
    <string name="app_name">Governow</string>
    <string name="app_icon">Governow</string>
    <string name="login_button">Masuk</string>
    <string name="signup_botton">Daftar</string>
    <string name="welcome_title">Governow</string>
    <string name="Login_bar">Sign In</string>
    <string name="title_login">Sign In</string>
    <string name="email_input">Email</string>
    <string name="password_error">Password must be at least 8 characters long</string>
    <string name="password_input">Password</string>
    <string name="login_botton">Sign In</string>
    <string name="login_google">Masuk dengan Google</string>
    <string name="title_signUp">Sign Up</string>
    <string name="nameSignUp">Nama</string>
    <string name="login_now">Masuk Sekarang</string>
    <string name="already_have_account">"Sudah memiliki akun? "</string>
    <string name="create_account">Belum memiliki akun?</string>
    <string name="signup_now">Daftar Sekarang</string>
    <string name="profile_image">Image Profile</string>
    <string name="main_name">Nama</string>
    <string name="title_page">HomePage</string>
    <string name="submit">Submit</string>
    <string name="username_input">Username</string>
    <string name="title_news">Judul Berita</string>
    <string name="description_news">Deskripsi Berita</string>
    <string name="date_news">30 April 2024</string>
    <string name="item_image">Gambar berita</string>
    <string name="title_detail_news">Governow</string>
    <string name="toolbar_image_description">Governow</string>
    <string name="username_profile">Username</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="editPhoto">Edit Photo</string>
    <string name="full_name">Nama</string>
    <string name="full_name_edit">Nama</string>
    <string name="username_edit">Username</string>
    <string name="email_edit">Email</string>
    <string name="password_edit">Password</string>
    <string name="save">Simpan</string>
    <string name="title_add_story">Form Aspirasi</string>
    <string name="hint_title">Ketik Judul Aspirasi</string>
    <string name="hint_description">Ketik Aspirasi Anda</string>
    <string name="hint_date">Ketik Tanggal</string>
    <string name="hint_location">Ketik Lokasi</string>
    <string name="button_submit">Kirim</string>
    <string name="button_attach">Upload Lampiran</string>
    <string name="lampiran">Upload Lampiran</string>
    <string name="upload_lampiran">Upload Lampiran</string>
    <string name="title_detail_story">Detail Aspirasi</string>
    <string name="title_aspirasi">Kemalingan</string>
    <string name="lokasi_aspirasi">Saranjana</string>
    <string name="deskripsi_aspirasi">Niat Hati Pelihara Tujuh Kambing untuk Dijual Saat Idul Adha, Pria Ini Malah Kemalingan</string>
    <string name="date_aspirasi">14/05/2024</string>
    <string name="image_item">Image</string>
    <string name="title_item">Judul Aspirasi</string>
    <string name="list_aspirasi">List Aspirasi</string>
    <string name="add_aspirasi">Tambah Aspirasi</string>
    <string name="name_user">Hai, Dad</string>
    <string name="username_post">Username</string>
    <string name="tittle_post">Judul Berita</string>
    <string name="full_name_post">Nama</string>
    <string name="favorite_icon">Favorite</string>
    <string name="bookmark_icon">Simpan</string>
    <string name="comment_icon">Comment</string>
    <string name="news_tittle">Berita</string>
    <string name="desc_news">Pilih berita terbaru mengenai pemerintahan</string>
    <string name="search_hint">Silahkan cari</string>
    <string name="news_tittle_list">18 Tahun Semburan Lumpur Lapindo, Dosen ITB Pertanyakan Reaktivasi Sesar Watukosek\n</string>
    <string name="like_icon">like</string>
    <string name="share_icon">Share</string>
    <string name="username_main">username</string>
    <string name="share_main">Share</string>
    <string name="comment">Comment</string>
    <string name="like">Like</string>
    <string name="share">Share</string>
    <string name="tittle_poll">Siapa yang menang?</string>
    <string name="total_vote">1.249</string>
    <string name="rules">Silahkan pilih satu</string>
    <string name="option1">Option 1</string>
    <string name="option2">Option 2</string>
    <string name="option3">Option 3</string>
    <string name="see_poll">Lihat Vote</string>
    <string name="add_option">Tambah Pilihan</string>
    <string name="home">Home</string>
    <string name="news">Berita</string>
    <string name="profile">Profile</string>
    <string name="form">Aspirasi</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logout">Keluar</string>
    <string name="category">Kategori</string>
    <string name="error_field_required_tittle">Judul jangan dikosongkan!</string>
    <string name="error_field_required_description">Deskripsi jangan dikosongkan!</string>
    <string name="error_field_required_date">Tanggal jangan dikosongkan!</string>
    <string name="error_field_required_location">Lokasi jangan dikosongkan!</string>
    <string-array name="aspiration_array">
        <item>Keamanan</item>
        <item>Kesehatan</item>
        <item>Infrastruktur</item>
        <item>Edukasi</item>
    </string-array>
</resources>