<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="8dp"
    app:strokeWidth="1dp"
    app:strokeColor="#4A4848">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/img_avatar_home"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginEnd="8dp"
                app:civ_border_color="#FF909090"
                app:civ_border_width="2dp"
                tools:src="@tools:sample/avatars" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/name_home"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/full_name"
                    android:textStyle="bold"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/username_home"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/username_main"
                    android:textColor="#888888"
                    android:textSize="14sp" />

            </LinearLayout>

        </LinearLayout>

        <ImageView
            android:id="@+id/iv_image_item"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="16dp"
            android:scaleType="centerCrop"
            android:contentDescription="@string/image_item"
            tools:src="@tools:sample/avatars"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            android:weightSum="3">

            <ImageButton
                android:id="@+id/ib_like_main"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:src="@drawable/ic_fav_black"
                android:contentDescription="@string/favorite_icon"
                android:layout_gravity="center"/>

            <ImageButton
                android:id="@+id/ib_comment_main"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:src="@drawable/ic_comment"
                android:contentDescription="@string/comment"
                android:layout_gravity="center"/>

            <ImageButton
                android:id="@+id/ib_share_main"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:src="@drawable/ic_share"
                android:contentDescription="@string/share_main"
                android:layout_gravity="center"/>

        </LinearLayout>

    </LinearLayout>
</com.google.android.material.card.MaterialCardView>
